Implemented full flows, elasticsearch, unit tests, etc. + Added documentation
